      additionally use entries from the current journal abbreviations list, and will also complete
      on the entire field up to the cursor rather than just looking at the last word only.
    - Added support for postformatter in Layout. The postformatter will be run after
      the formatters called from a layout.
    - Modified Endnote export filter so "--" gets converted to "-" in the "pages" field.
    - Changed keyword groups so they will match on whole words only. E.g. a keyword group for the
      keyword "can" will no longer match the keyword "scanner".
    - Improved entry type determination and author parsing for some varieties of CSA files.
    - Minor change to Harvard RTF export. Added space after "ed.", and added editor to output for
      inbook entries.
    - Fixed bug: editing source doesn't allow change of entry type.
    - RTFChars formatter now converts --- to \emdash and -- to \endash.

2.6b
    - Added pages information to several entry types in Endnote export.
    - Modified LastPage formatter so it returns the number when only the number of pages is given.
    - Modified search algorithms so LaTeX commands are removed before search. For instance, this
      means that the value "test \textit{case}" now matches the search string "test case".
    - Changed default table font family to "SansSerif".
    - Can now create lock file while writing a bib file. The lock file is checked before
      saving, and before scanning an externally changed file, in order to avoid reading an
      unfinished file.
    - Added support for dragging a file link from the file column to another application.
    - Added toolbar button and shortcut (Alt-F) in entry editor for autosetting file links.
    - Improved ISI import filter so DOI information is included.
    - Fixed bug: metadata changes would not be detected as external changes to a database.
    - Fixed bug: when accepting external changes and not saving before new changes are