@@ -2130,3 +2130,5 @@ Current_tmp_value=Current_tmp_value
 Metadata_change=Metadata_change
 Changes_have_been_made_to_the_following_metadata_elements=Changes_have_been_made_to_the_following_metadata_elements
 
+Generate_groups_for_author_last_names=Generate_groups_for_author_last_names
+Generate_groups_for_editor_last_names=Generate_groups_for_editor_last_names
