@@ -9,6 +9,8 @@
       on the entire field up to the cursor rather than just looking at the last word only.
     - Added support for postformatter in Layout. The postformatter will be run after
       the formatters called from a layout.
+    - Improved group autogeneration. Added option to generate groups based on author or editor
+      last names. Autogenerated groups are now alphabetized.
     - Modified Endnote export filter so "--" gets converted to "-" in the "pages" field.
     - Changed keyword groups so they will match on whole words only. E.g. a keyword group for the
       keyword "can" will no longer match the keyword "scanner".
